fixed weird scrollbar issue on gallery

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,6 +1,7 @@
 .gallery-root {
   text-align: center;
   display: grid;
+  overflow-y: hidden !important;
 }
 
 .gallery-header {
